[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites&Audio/wineglass1/150honey.png" type="Texture" id=1]
[ext_resource path="res://Sprites&Audio/wineglass1/150honey.wav" type="AudioStream" id=2]
[ext_resource path="res://Sprites&Audio/wineglass1/150water.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sprites&Audio/wineglass1/300water.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sprites&Audio/wineglass1/300honey.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scripts/winglass1/Wineglass1.gd" type="Script" id=6]
[ext_resource path="res://Sprites&Audio/wineglass1/150honey2.png" type="Texture" id=7]
[ext_resource path="res://Sprites&Audio/wineglass1/300honey2.png" type="Texture" id=8]
[ext_resource path="res://Sprites&Audio/wineglass1/300honey.png" type="Texture" id=9]
[ext_resource path="res://Sprites&Audio/wineglass1/150water.png" type="Texture" id=10]
[ext_resource path="res://Sprites&Audio/wineglass1/150water2.png" type="Texture" id=11]
[ext_resource path="res://Sprites&Audio/wineglass1/300water.png" type="Texture" id=12]
[ext_resource path="res://Sprites&Audio/wineglass1/бокал с водой 300_1.png.tres" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 33.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "150mlhoney",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "150mlwater",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "300mlhoney",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "300mlwater",
"speed": 5.0
} ]

[node name="Wineglass1" type="Node2D"]
position = Vector2( 225, 130 )
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 3.5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "150mlhoney"

[node name="honey150" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="water150" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="water300" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="honey300" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = -11.0
margin_top = 59.0
margin_right = 6.0
margin_bottom = 77.0

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
